build: init esbuild setup

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
         because `neu update` typically downloads it.
         Avoid copy-pasting it. 
         -->
-    <script src="js/neutralino.js"></script>
+    <script src="neutralino.js"></script>
     <!-- Your app's source files -->
-    <script src="js/main.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
